fix: Rewriting of parameter placeholders for prepared statements.
Question marks `?` must only be rewritten for a `PreparedStatement`, but for that, at all times, when the configuration option is set to `true`, even when Cypher is enforced.
Also, question marks may not be rewritten in single quoted strings.